[pom] surefire arglist now global property for easier usage